--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ section {
     object-fit: cover;
 }
 
-.featured-projects-section {
+.web-projects-section {
     width: 100%;
     margin: 0 auto;
 }
